Keep only dbgh5 and dbginfo

--- a/gatb-core/tools/CMakeLists.txt
+++ b/gatb-core/tools/CMakeLists.txt
@@ -7,7 +7,7 @@ add_definitions (${gatb-core-flags} " -Wno-ambiguous-member-template")
 
 include_directories (${gatb-core-includes})
 
-list (APPEND PROGRAMS dbgh5 dbginfo dbgtopology bankgen)
+list (APPEND PROGRAMS dbgh5 dbginfo)
 
 FOREACH (program ${PROGRAMS})
   add_executable(${program} ${program}.cpp)
