--- a/gatb-core/test/CMakeLists.txt
+++ b/gatb-core/test/CMakeLists.txt
@@ -1,4 +1,8 @@
 ################################################################################
+message ("--  ---------- GATB TESTS ----------")
+################################################################################
+
+################################################################################
 #  UNIT TESTS GENERATION 
 ################################################################################
 ADD_SUBDIRECTORY (unit)
