--- a/gatb-core/tools/CMakeLists.txt
+++ b/gatb-core/tools/CMakeLists.txt
@@ -1,5 +1,9 @@
 ################################################################################
-#  EXAMPLES 
+message ("--  ---------- GATB TOOLS ----------")
+################################################################################
+
+################################################################################
+#  TOOLS
 ################################################################################
 
 # We add the compilation options for the library
@@ -17,6 +21,4 @@ ENDFOREACH (program)
 ################################################################################
 #  INSTALLATION 
 ################################################################################
-IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
-    install (TARGETS dbgh5 dbginfo DESTINATION bin)
-ENDIF ()
+install (TARGETS dbgh5 dbginfo DESTINATION bin)
