--- a/gatb-core/examples/CMakeLists.txt
+++ b/gatb-core/examples/CMakeLists.txt
@@ -1,4 +1,8 @@
 ################################################################################
+message ("--  ---------- GATB EXAMPLES ----------")
+################################################################################
+
+################################################################################
 #  EXAMPLES 
 ################################################################################
 
