1) avoid systematic headers copy (no need to cmake .. each time a header file is changed)  2) Default 4 kmer sizes are defined => possibility to define a 'kmax' value during cmake, for instance "cmake -Dkmax=256 .."

--- a/gatb-core/src/CMakeLists.txt
+++ b/gatb-core/src/CMakeLists.txt
@@ -1,26 +1,27 @@
 ################################################################################
+#  KMER SIZE DEFINITION 
+################################################################################
+
+# We define several sizes of kmers
+SET (KSIZE_1  "32")
+SET (KSIZE_2  "64")
+SET (KSIZE_3  "96")
+SET (KSIZE_4 "128")
+
+# Users can overwrite the default fourth value
+IF (kmax)
+    SET (KSIZE_4 ${kmax})
+ENDIF()
+
+MESSAGE ("-- SUPPORTED KMER SIZES ARE ${KSIZE_1} ${KSIZE_2} ${KSIZE_3} ${KSIZE_4}")
+
+################################################################################
 #  CONFIGURATION FILE
 ################################################################################
 configure_file (
     ${PROJECT_SOURCE_DIR}/src/gatb/system/api/config.hpp.in 
     ${PROJECT_BINARY_DIR}/include/gatb/system/api/config.hpp
 )
-
-IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
-    install (FILES ${PROJECT_BINARY_DIR}/include/gatb/system/api/config.hpp DESTINATION include/gatb/system/api/)
-ENDIF ()
-
-################################################################################
-#  HEADERS COPY
-################################################################################
-file (COPY ${PROJECT_SOURCE_DIR}/src/
-    DESTINATION ${PROJECT_BINARY_DIR}/include
-    FILES_MATCHING PATTERN "*.hpp"  PATTERN "*.tpp"  PATTERN "*.pri"
-)
-
-IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
-    install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/ DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.tpp" PATTERN "*.pri")
-ENDIF ()
 
 ################################################################################
 #  LIBRARY GENERATION 
@@ -49,4 +50,6 @@ set_target_properties  (gatbcore-static   PROPERTIES OUTPUT_NAME  gatbcore  clea
 # We install the libraries
 IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
     install (TARGETS gatbcore-static DESTINATION lib)
+    install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/ DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.tpp" PATTERN "*.pri")
+    install (FILES ${PROJECT_BINARY_DIR}/include/gatb/system/api/config.hpp DESTINATION include/gatb/system/api/)
 ENDIF ()
