--- a/gatb-core/examples/CMakeLists.txt
+++ b/gatb-core/examples/CMakeLists.txt
@@ -14,11 +14,10 @@ include_directories (${gatb-core-includes})
 file (GLOB_RECURSE  PROGRAMS_FILES  *.cpp)
 
 file (GLOB_RECURSE  PROGRAMS_FILES_EXTRA  
-    bank9.cpp bank11.cpp bank12.cpp bank13.cpp 
-    kmer7.cpp
+    bank13.cpp 
     debruijn7.cpp debruijn18.cpp debruijn19.cpp debruijn20.cpp debruijn21.cpp debruijn22.cpp debruijn23.cpp
-    storage4.cpp  storage5.cpp  storage6.cpp
-    multithreading1.cpp  multithreading2.cpp  multithreading3.cpp  multithreading4.cpp  multithreading5.cpp  multithreading6.cpp
+    storage4.cpp 
+    multithreading2.cpp  multithreading4.cpp  multithreading5.cpp  multithreading6.cpp
     ToyTool.cpp  
 )
 
