--- a/gatb-core/tools/CMakeLists.txt
+++ b/gatb-core/tools/CMakeLists.txt
@@ -11,7 +11,7 @@ add_definitions (${gatb-core-flags} " -Wno-ambiguous-member-template")
 
 include_directories (${gatb-core-includes})
 
-list (APPEND PROGRAMS dbgh5 dbginfo)
+list (APPEND PROGRAMS dbgh5 dbginfo BankDownload)
 
 FOREACH (program ${PROGRAMS})
   add_executable(${program} ${program}.cpp)
