--- a/gatb-core/tools/CMakeLists.txt
+++ b/gatb-core/tools/CMakeLists.txt
@@ -7,7 +7,7 @@ message ("--  ---------- GATB TOOLS ----------")
 ################################################################################
 
 # We add the compilation options for the library
-add_definitions (${gatb-core-flags} " -Wno-ambiguous-member-template")
+add_definitions (${gatb-core-flags})
 
 include_directories (${gatb-core-includes})
 
