better NewDelivery process

--- a/gatb-core/scripts/NewProject/CMakeLists.txt
+++ b/gatb-core/scripts/NewProject/CMakeLists.txt
@@ -1,22 +1,46 @@
+project(XXX)
+
+cmake_minimum_required(VERSION 2.6)
 
 ################################################################################
-# TOOL
+# Define cmake modules directory
+################################################################################
+SET (CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/thirdparty/gatb-core/cmake)
+
+################################################################################
+# THIRD PARTIES
 ################################################################################
 
-# we get compilation definitions from the gatb-core part
-add_definitions (${gatb-core-flags})
+# We don't want to install some GATB-CORE artifacts
+SET (GATB_CORE_EXCLUDE_TOOLS     1)
+SET (GATB_CORE_EXCLUDE_TESTS     1)
+SET (GATB_CORE_EXCLUDE_EXAMPLES  1)
 
-# we give the headers directories from : 
-#       - from project source 
-#       - from GATB-CORE source
-#       - from dsk source 
-include_directories (src  ${gatb-core-includes})
+# GATB CORE
+include (GatbCore)
 
-# we define the files to be compiled
-file (GLOB_RECURSE  ProjectFiles  src/*)
+################################################################################
+# TOOLS
+################################################################################
 
-# we define the artifact to be built: the project binary
-add_executable        (${CMAKE_PROJECT_NAME}  ${ProjectFiles})
+ADD_SUBDIRECTORY(tools)
 
-# we define which libraries to be linked with project binary
-target_link_libraries (${CMAKE_PROJECT_NAME}  ${gatb-core-libraries})
+################################################################################
+# DELIVERY
+################################################################################
+
+# If your current login name is different from your GForge login name, you have
+# to overwrite the CPACK_USER_NAME to be the same as your GForge login
+#SET (CPACK_USER_NAME                    "your_gforge_login")
+
+# We set the version number
+SET (CPACK_PACKAGE_VERSION              "1.0.0")  
+
+# We have to tell what is the server name
+SET (CPACK_GFORGE_PROJECT_NAME          "gatb-tools")
+
+# We set the kind of archive
+SET (CPACK_GENERATOR                    "TGZ")
+SET (CPACK_SOURCE_GENERATOR             "TGZ")
+
+include (Delivery)
