Add constants for HDF5 management (including workaround)

--- a/gatb-core/src/gatb/system/api/config.hpp.in
+++ b/gatb-core/src/gatb/system/api/config.hpp.in
@@ -38,4 +38,4 @@
 
 
 #define GATB_HDF5_NB_ITEMS_PER_BLOCK (4*1024)
-#define GATB_HDF5_CLEANUP_WORKAROUND (0x5)
+#define GATB_HDF5_CLEANUP_WORKAROUND 4
