--- a/gatb-core/src/gatb/system/api/config.hpp.in
+++ b/gatb-core/src/gatb/system/api/config.hpp.in
@@ -36,6 +36,11 @@
 #define PREC_3  ((KSIZE_3+31)/32)
 #define PREC_4  ((KSIZE_4+31)/32)
 
+#ifdef GATB_USE_CUSTOM_ALLOCATOR
+    #define CUSTOM_MEM_ALLOC  1
+#else
+    #define CUSTOM_MEM_ALLOC  0
+#endif
 
 #define GATB_HDF5_NB_ITEMS_PER_BLOCK (4*1024)
 #define GATB_HDF5_CLEANUP_WORKAROUND 4
