slightly changed CppUnit detection method, let me know if it fails to detect cppunit on your system

--- a/gatb-core/test/unit/CMakeLists.txt
+++ b/gatb-core/test/unit/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories (${gatb-core-includes}  ${gatb-core_SOURCE_DIR}/test/unit/sr
 link_directories (${gatb-core-extra-libraries-path})
 
 add_executable        (gatb-core-cppunit    ${GatbCoreTestFiles})
-target_link_libraries (gatb-core-cppunit    ${gatb-core-libraries} ${CPPUNIT_LIBRARY_STATIC})
+target_link_libraries (gatb-core-cppunit    ${gatb-core-libraries} ${CPPUNIT_LIBRARIES})
 
 #################################################
 #  LAUNCH 
