--- a/gatb-core/examples/CMakeLists.txt
+++ b/gatb-core/examples/CMakeLists.txt
@@ -19,7 +19,7 @@ file (GLOB_RECURSE  PROGRAMS_FILES  *.cpp)
 file (GLOB_RECURSE  PROGRAMS_FILES_EXTRA  
     bank13.cpp 
     debruijn7.cpp debruijn18.cpp debruijn19.cpp debruijn20.cpp debruijn21.cpp debruijn22.cpp debruijn23.cpp debruijn25.cpp
-    kmer5.cpp kmer8.cpp
+    kmer5.cpp kmer8.cpp kmer11.cpp
     storage4.cpp 
     multithreading2.cpp  multithreading4.cpp  multithreading5.cpp  multithreading6.cpp
     ToyTool.cpp  
