--- a/gatb-core/tools/CMakeLists.txt
+++ b/gatb-core/tools/CMakeLists.txt
@@ -27,7 +27,11 @@ FOREACH (program ${PROGRAMS})
   set_target_properties(${program} PROPERTIES LINK_SEARCH_START_STATIC w1)
   set_target_properties(${program} PROPERTIES LINK_SEARCH_END_STATIC 1)
   set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
-  set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++ -static")
+  if (APPLE)
+      set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++") #removed -static because doesn't work on mac's
+  else()
+      set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++ -static")
+  endif()
 ENDFOREACH (program)
 
 ################################################################################
